fix: Fix singleNew heading display on mobile devices

--- a/client/src/pages/singleNews/index.scss
+++ b/client/src/pages/singleNews/index.scss
@@ -59,6 +59,10 @@ article{
     @media (max-width: 1125px) {
         .newsBody{
             width: 80%;
+
+            h1{
+                padding: 0;
+            }
         }
     }
 }
